# fwupd

contrib/: fwupd.spec.in
plugins/: meson.build
plugins/synaptics-rmi/: README.md  fu-synaptics-rmi-common.c  fu-synaptics-rmi-common.h  fu-synaptics-rmi-device.c  fu-synaptics-rmi-firmware.c  meson.build
plugins/synapticsmst/: fu-plugin-synapticsmst.c  fu-self-test.c  fu-synapticsmst-device.c  fu-synapticsmst-device.h
